--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
-* @streamlit/community-cloud
+
 your-repo/
 ├── streamlit_app.py  ← this file must contain your dashboard code
 ├── requirements.txt
+crownlands_risk.csv
 ├── (optional CSV or DB file)
