--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 your-repo/
-├── streamlit_app.py  ← this file must contain your dashboard code
+├── asset_inspections_dashboard.py ← this file must contain your dashboard code
 ├── requirements.txt
 ├── (optional CSV or DB file)
